IVRFramework/src/com/ibm/ivr/eus/plugin/expressions/ExpressionParser.java
package com.ibm.ivr.eus.plugin.expressions;
import java.io.*;
import java.util.*;
import com.ibm.ivr.eus.plugin.expressions.Expressions;

/** Parses simple expressions. This parser is machine generated using
 * ExpressionParserGrammar.jj
 * 
 * For example usage see main()
 *  
 * @author Greg
 *
 */
public class ExpressionParser {
    // private static Logger LOGGER = Logger.getLogger(ExpressionPluginImpl.class);
    Expressions handler = null;
    public String logtoken = "ExpressionParser.";
        public static void main(String args []) throws ParseException
        {

        String test1 =
"x = 'gregsam' ; y=\u005c"x'tom'\u005c" ; POS(y, x + y + x)";
                ExpressionParser parser =  new ExpressionParser(new StringReader(test1));
                parser.handler = new Expressions();
                String result = ""+parser.statements();
                System.out.println(test1+"="+result);
        }

  final public Object expression() throws ParseException {
        Object value;
        Object e1 = null, e2 = null, r1 = null, r2 = null;
        Token op = null;
    if(handler.debug) handler.log2("expression->");
    if (jj_2_4(10)) {
      e1 = lvalue();
      jj_consume_token(23);
      e2 = expression();
                                                        value = handler.setVar(""+e1, e2);
    } else if (jj_2_5(10)) {
      r1 = relation();
                         value = r1;
      label_1:
      while (true) {
        if (jj_2_1(10)) {
          ;
        } else {
          break label_1;
        }
        if (jj_2_2(10)) {
          op = jj_consume_token(AND);
        } else if (jj_2_3(10)) {
          op = jj_consume_token(OR);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
                    if(handler.debug) handler.log2(" " + op.image + " ");
        r2 = relation();
                                        value = handler.relation(value, op.image, r2);
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
            //if(handler.debug) handler.log2(")");
                {if (true) return value;}
    throw new Error("Missing return statement in function");
  }

  final public Object relation() throws ParseException {
        Object value;
        Object r1 = null, r2 = null;
        Token op = null;
    r1 = add();
                    value = r1;
    label_2:
    while (true) {
      if (jj_2_6(10)) {
        ;
      } else {
        break label_2;
      }
      op = jj_consume_token(BOOL_OPER);
                                              if(handler.debug) handler.log2(" " + op.image + " ");
      r2 = add();
                                value = handler.relation(value, op.image, r2);
    }
          {if (true) return value;}
    throw new Error("Missing return statement in function");
  }

  final public String literal() throws ParseException {
  Token t;
  String s;
    if (jj_2_7(10)) {
      t = jj_consume_token(LITERAL1);
    } else if (jj_2_8(10)) {
      t = jj_consume_token(LITERAL2);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
     s = ""+t.image.substring(1, t.image.length() - 1);
            if(handler.debug) handler.log2("literal->['"+s+"']");
        {if (true) return s;}
    throw new Error("Missing return statement in function");
  }

//term:	 number | identifier | function | '(' expression ')' |	literal;
  final public Object actualParameters() throws ParseException {
        Object value;
        Object e1 = null, e2 = null, r1 = null, r2 = null;
        Token op = null;
//	String value = "";
//	String e1 = "", e2 = "", r1 = "", r2 = "";
//	Token op = null;
        Token t = null;
        List results = new ArrayList();
    e1 = expression();
            results.add(e1);
    label_3:
    while (true) {
      if (jj_2_9(10)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(24);
            if(handler.debug) handler.log2(",");
      e2 = expression();
                    results.add(e2);
    }
                {if (true) return results.toArray();}
    throw new Error("Missing return statement in function");
  }

  final public Object function() throws ParseException {
  String fn = "";
  Object value;
  Object parms = null;
  Token t;
  if(handler.debug) handler.log2("function->");
    fn = functionname();
    jj_consume_token(25);

    if (jj_2_10(10)) {
      parms = actualParameters();
    } else {
      ;
    }
    jj_consume_token(26);

           value = handler.function(fn, parms);
           // if(handler.debug) handler.log2("==>"+value+")");
                {if (true) return value;}
    throw new Error("Missing return statement in function");
  }

  final public Object term() throws ParseException {
  Object value;
  if(handler.debug) handler.log2("term->");
    if (jj_2_11(10)) {
      value = number();
    } else if (jj_2_12(10)) {
      value = function();
    } else if (jj_2_13(10)) {
      value = literal();
    } else if (jj_2_14(10)) {
      jj_consume_token(25);
      value = expression();
      jj_consume_token(26);
    } else if (jj_2_15(10)) {
      value = identifier();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
                {if (true) return value;}
    throw new Error("Missing return statement in function");
  }

  final public String functionname() throws ParseException {
        Token t;
    if(handler.debug) handler.log2("functionname->");
    t = jj_consume_token(IDENT);
          if(handler.debug) handler.log2(t.image+"(");
          {if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }

  final public String lvalue() throws ParseException {
        Token t;
    if(handler.debug) handler.log2("lvalue->");
    t = jj_consume_token(IDENT);
          if(handler.debug) handler.log2(t.image + " = ");
          {if (true) return t.image;}
    throw new Error("Missing return statement in function");
  }

  final public Object identifier() throws ParseException {
        Token t;
        Object v;
    t = jj_consume_token(IDENT);
    if(handler.debug) handler.log2("identifier->["+t.image+"]");
                if(t.image.equals("true") || t.image.equals("false"))
                        v = Boolean.parseBoolean(t.image);
                else
                        v = handler.getVar(t.image);
          //if(handler.debug) handler.log2(t.image+"->"+v);
          {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  final public Object statements() throws ParseException {
        Object r1,r2=null;
        Token t, op;
    r1 = expression();
    label_4:
    while (true) {
      if (jj_2_16(10)) {
        ;
      } else {
        break label_4;
      }
      op = jj_consume_token(SEPERATOR);
                                       if(handler.debug) handler.log2(" " + op.image + " ");
      r2 = expression();
    }
          {if (true) return r2 == null ? r1 : r2;}
    throw new Error("Missing return statement in function");
  }

  final public Object add() throws ParseException {
        Object r1,r2, value;
        String opval="+";
        Token t, op;
    r1 = mult();
                   value = r1;
    label_5:
    while (true) {
      if (jj_2_17(10)) {
        ;
      } else {
        break label_5;
      }
      if (jj_2_18(10)) {
        op = jj_consume_token(PLUS);
                  opval = op.image;
      } else if (jj_2_19(10)) {
        op = jj_consume_token(MINUS);
                   opval = op.image;
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                              if(handler.debug) handler.log2(" " + opval + " ");
      r2 = mult();
                                value = handler.math(value, opval, r2);
    }
          {if (true) return value;}
    throw new Error("Missing return statement in function");
  }

  final public Object mult() throws ParseException {
        Object r1,r2, value;
        Token t, op;
    r1 = term();
                           value = r1;
    label_6:
    while (true) {
      if (jj_2_20(10)) {
        ;
      } else {
        break label_6;
      }
      if (jj_2_21(10)) {
        op = jj_consume_token(MULTIPLY);
      } else if (jj_2_22(10)) {
        op = jj_consume_token(DIVIDE);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                                                                if(handler.debug) handler.log2(" " + op.image + " ");
      r2 = term();
                                        value = handler.math(value, op.image, r2);
    }
          {if (true) return value;}
    throw new Error("Missing return statement in function");
  }

  final public Object number() throws ParseException {
  Token t;
    t = jj_consume_token(NUMBER);
            if(handler.debug) handler.log2("number->["+t.image+"]");
                if ((""+t.image).indexOf(".") != -1)
                        {if (true) return Double.parseDouble(""+t.image);}

                {if (true) return new Integer(Integer.parseInt(""+t.image));}
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_13(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_14(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_15(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_16(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_17(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_18(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_19(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_20(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_21(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_22(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  private boolean jj_3R_12() {
    if (jj_scan_token(NUMBER)) return true;
    return false;
  }

  private boolean jj_3_8() {
    if (jj_scan_token(LITERAL2)) return true;
    return false;
  }

  private boolean jj_3_16() {
    if (jj_scan_token(SEPERATOR)) return true;
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3R_16() {
    if (jj_3R_17()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_20()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_18() {
    if (jj_scan_token(IDENT)) return true;
    return false;
  }

  private boolean jj_3R_13() {
    if (jj_3R_18()) return true;
    if (jj_scan_token(25)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_10()) jj_scanpos = xsp;
    if (jj_scan_token(26)) return true;
    return false;
  }

  private boolean jj_3_3() {
    if (jj_scan_token(OR)) return true;
    return false;
  }

  private boolean jj_3_2() {
    if (jj_scan_token(AND)) return true;
    return false;
  }

  private boolean jj_3_1() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3_3()) return true;
    }
    if (jj_3R_7()) return true;
    return false;
  }

  private boolean jj_3_22() {
    if (jj_scan_token(DIVIDE)) return true;
    return false;
  }

  private boolean jj_3_7() {
    if (jj_scan_token(LITERAL1)) return true;
    return false;
  }

  private boolean jj_3_15() {
    if (jj_3R_15()) return true;
    return false;
  }

  private boolean jj_3_19() {
    if (jj_scan_token(MINUS)) return true;
    return false;
  }

  private boolean jj_3_14() {
    if (jj_scan_token(25)) return true;
    if (jj_3R_9()) return true;
    if (jj_scan_token(26)) return true;
    return false;
  }

  private boolean jj_3R_14() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_7()) {
    jj_scanpos = xsp;
    if (jj_3_8()) return true;
    }
    return false;
  }

  private boolean jj_3_13() {
    if (jj_3R_14()) return true;
    return false;
  }

  private boolean jj_3_12() {
    if (jj_3R_13()) return true;
    return false;
  }

  private boolean jj_3_6() {
    if (jj_scan_token(BOOL_OPER)) return true;
    if (jj_3R_10()) return true;
    return false;
  }

  private boolean jj_3_11() {
    if (jj_3R_12()) return true;
    return false;
  }

  private boolean jj_3R_15() {
    if (jj_scan_token(IDENT)) return true;
    return false;
  }

  private boolean jj_3_18() {
    if (jj_scan_token(PLUS)) return true;
    return false;
  }

  private boolean jj_3_5() {
    if (jj_3R_7()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_1()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_17() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_11()) {
    jj_scanpos = xsp;
    if (jj_3_12()) {
    jj_scanpos = xsp;
    if (jj_3_13()) {
    jj_scanpos = xsp;
    if (jj_3_14()) {
    jj_scanpos = xsp;
    if (jj_3_15()) return true;
    }
    }
    }
    }
    return false;
  }

  private boolean jj_3_4() {
    if (jj_3R_8()) return true;
    if (jj_scan_token(23)) return true;
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3_17() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_18()) {
    jj_scanpos = xsp;
    if (jj_3_19()) return true;
    }
    if (jj_3R_16()) return true;
    return false;
  }

  private boolean jj_3_9() {
    if (jj_scan_token(24)) return true;
    if (jj_3R_9()) return true;
    return false;
  }

  private boolean jj_3R_9() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3_5()) return true;
    }
    return false;
  }

  private boolean jj_3_10() {
    if (jj_3R_11()) return true;
    return false;
  }

  private boolean jj_3_21() {
    if (jj_scan_token(MULTIPLY)) return true;
    return false;
  }

  private boolean jj_3R_11() {
    if (jj_3R_9()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_9()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_10() {
    if (jj_3R_16()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_17()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3_20() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_21()) {
    jj_scanpos = xsp;
    if (jj_3_22()) return true;
    }
    if (jj_3R_17()) return true;
    return false;
  }

  private boolean jj_3R_8() {
    if (jj_scan_token(IDENT)) return true;
    return false;
  }

  private boolean jj_3R_7() {
    if (jj_3R_10()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3_6()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  /** Generated Token Manager. */
  public ExpressionParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private Token jj_scanpos, jj_lastpos;
  private int jj_la;
  private int jj_gen;
  final private int[] jj_la1 = new int[0];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {};
   }
  final private JJCalls[] jj_2_rtns = new JJCalls[22];
  private boolean jj_rescan = false;
  private int jj_gc = 0;

  /** Constructor with InputStream. */
  public ExpressionParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public ExpressionParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ExpressionParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor. */
  public ExpressionParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new ExpressionParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Constructor with generated Token Manager. */
  public ExpressionParser(ExpressionParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  /** Reinitialise. */
  public void ReInit(ExpressionParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 0; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      if (++jj_gc > 100) {
        jj_gc = 0;
        for (int i = 0; i < jj_2_rtns.length; i++) {
          JJCalls c = jj_2_rtns[i];
          while (c != null) {
            if (c.gen < jj_gen) c.first = null;
            c = c.next;
          }
        }
      }
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }

  static private final class LookaheadSuccess extends java.lang.Error { }
  final private LookaheadSuccess jj_ls = new LookaheadSuccess();
  private boolean jj_scan_token(int kind) {
    if (jj_scanpos == jj_lastpos) {
      jj_la--;
      if (jj_scanpos.next == null) {
        jj_lastpos = jj_scanpos = jj_scanpos.next = token_source.getNextToken();
      } else {
        jj_lastpos = jj_scanpos = jj_scanpos.next;
      }
    } else {
      jj_scanpos = jj_scanpos.next;
    }
    if (jj_rescan) {
      int i = 0; Token tok = token;
      while (tok != null && tok != jj_scanpos) { i++; tok = tok.next; }
      if (tok != null) jj_add_error_token(kind, i);
    }
    if (jj_scanpos.kind != kind) return true;
    if (jj_la == 0 && jj_scanpos == jj_lastpos) throw jj_ls;
    return false;
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;
  private int[] jj_lasttokens = new int[100];
  private int jj_endpos;

  private void jj_add_error_token(int kind, int pos) {
    if (pos >= 100) return;
    if (pos == jj_endpos + 1) {
      jj_lasttokens[jj_endpos++] = kind;
    } else if (jj_endpos != 0) {
      jj_expentry = new int[jj_endpos];
      for (int i = 0; i < jj_endpos; i++) {
        jj_expentry[i] = jj_lasttokens[i];
      }
      jj_entries_loop: for (java.util.Iterator<?> it = jj_expentries.iterator(); it.hasNext();) {
        int[] oldentry = (int[])(it.next());
        if (oldentry.length == jj_expentry.length) {
          for (int i = 0; i < jj_expentry.length; i++) {
            if (oldentry[i] != jj_expentry[i]) {
              continue jj_entries_loop;
            }
          }
          jj_expentries.add(jj_expentry);
          break jj_entries_loop;
        }
      }
      if (pos != 0) jj_lasttokens[(jj_endpos = pos) - 1] = kind;
    }
  }

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[27];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 0; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 27; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    jj_endpos = 0;
    jj_rescan_token();
    jj_add_error_token(0, 0);
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

  private void jj_rescan_token() {
    jj_rescan = true;
    for (int i = 0; i < 22; i++) {
    try {
      JJCalls p = jj_2_rtns[i];
      do {
        if (p.gen > jj_gen) {
          jj_la = p.arg; jj_lastpos = jj_scanpos = p.first;
          switch (i) {
            case 0: jj_3_1(); break;
            case 1: jj_3_2(); break;
            case 2: jj_3_3(); break;
            case 3: jj_3_4(); break;
            case 4: jj_3_5(); break;
